--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,43 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0px
+}
+
+.header-div {
+  margin-top: 20px;
+  font-size: 64px;
+  padding-top: 70px;
+  border-radius: 20px;
+  width: 80%;
+  height: 220px;
+  margin-left: 10%;
+  background-color: rgb(95, 95, 95);
+}
+
+
+.AllCards {
+  width: 100%;
+  padding-right: 7%;
+  margin-top: 30px;
+  height: 300px;
+}
+
+.newCard {
+  display: inline-block;
+  background-color: rgb(204, 204, 204);
+  width: 220px;
+  margin-left: 1.5%;
+  border-radius: 10px;
+  text-align: center;
+  height: 280px;
+} 
