--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  background-image: url("./background.jpg");
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
 
 * {
   margin: 0px;
@@ -27,7 +30,6 @@ code {
   height: 220px;
   margin-left: 10%;
   color: white;
-  background-color: rgb(51, 51, 51);
 }
 
 
@@ -49,6 +51,7 @@ code {
   height: 280px;
   padding: 10px;
   opacity: 0;
+  margin-top: 10px;
 } 
 
 .newCard0 {
@@ -78,6 +81,7 @@ code {
   width: 100px;
   margin-top: 30px;
 }
+
 
 .temp {
   font-size: 20px;
